--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
     <groupId>com.github.benoj</groupId>
     <artifactId>better-assertions</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <defaultGoal>compile</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
