--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
     <groupId>com.github.benoj</groupId>
     <artifactId>great-expectations</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <defaultGoal>compile</defaultGoal>
         <plugins>
@@ -28,7 +31,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>jdom</groupId>
+            <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1</version>
         </dependency>
