--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
                     <useUnlimitedThreads>true</useUnlimitedThreads>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.1.4</version>
+                <configuration>
+                    <targetClasses>
+                        <param>expectations.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>expectations.*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
