setting PIT to report without timestamp and setting coverage to fail when not me (95 for now until 100% is covered)

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
                     <mutators>
                         <mutator>ALL</mutator>
                     </mutators>
+                    <timestampedReports>false</timestampedReports>
+                    <mutationThreshold>95</mutationThreshold>
                 </configuration>
             </plugin>
         </plugins>
